# mvp_localization

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
include/: mvp_localization_backend.hpp
include/mvp_localization/: gps_processor.hpp  imu_processor.hpp  mvp_localization.hpp
launch/: test.launch.py
mvp_localization/: test2.py  test_node.py
src/: main.cpp  main_old.cpp  mvp_localization_backend.cpp
src/mvp_localization/: gps_processor.cpp  imu_processor.cpp  mvp_localization.cpp
test_data/rosbag2_2025_11_07-19_12_35nav_filtered/: metadata.yaml
test_data/rosbag2_2025_11_20-17_31_42/: params.yaml
test_data/rosbag2_2025_11_20-17_31_42/rosbag2_2025_11_20-17_31_43/: metadata.yaml
